--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,11 +6,11 @@
 }*/
 
 @font-face {
-    font-family: GTAmerica-Regular;
-    font-weight: normal;
-    font-style:normal;
-    src: url("assets/fonts/GT-America-Standard-Regular.eot");
-    src: local("assets/fonts/GT-America-Standard-Regular.otf") format("opentype");
+    font-family: 'GTAmerica-Regular';
+    src: 
+    	local('GT America'),
+    	local('GTAmerica-Regular'),
+    	url("assets/fonts/GT-America-Standard-Regular.otf") format("opentype");
 }
 
 /*@font-face {
