--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,65 +1,32 @@
 @import "libs/bootstrap-grid.min.css";
 
-/*@font-face {
-    font-family: GTAmerica-Regular;
-    src: local("assets/fonts/GT-America-Standard-Regular.otf") format("opentype");
-}*/
-
 @font-face {
-    font-family: 'GTAmerica-Regular';
-    src: 
-    	local('GT America'),
-    	local('GTAmerica-Regular'),
-    	url("GT-America-Standard-Regular.otf");
+    font-family: 'GTAmerica Regular';
+    font-weight:normal;
+    font-style:normal;
+    src: url("../fonts/GT-America-Standard-Regular.otf");
 }
-
-/*@font-face {
-    font-family: GTAmerica-Medium;
-    src: local("assets/fonts/GT-America-Standard-Medium.otf") format("opentype");
-}*/
 
 @font-face {
     font-family: 'GT America';
     font-weight:medium;
     font-style:normal;
-    src: 
-    	local('GT America'),
-    	local('GTAmerica-Medium'),
-    	url("assets/fonts/GT-America-Standard-Medium.otf");
+    src: url("../fonts/GT-America-Standard-Medium.otf");
 }
-
-@font-face {
-    font-family: GTAmerica-Medium;
-    font-weight: medium;
-    font-style:normal;
-    src: url("assets/fonts/GT-America-Standard-Medium.eot");
-    src: local("assets/fonts/GT-America-Standard-Medium.otf") format("opentype");
-}
-
-/*@font-face {
-    font-family: GTSectra-Book;
-    src: local("assets/fonts/GT-Sectra-Book.ttf") format("truetype");
-}*/
 
 @font-face {
     font-family: GTSectra-Book;
     font-weight: normal;
     font-style:normal;
-    src: url("assets/fonts/GT-Sectra-Book.ttf");
-    src: local("assets/fonts/GT-Sectra-Book.ttf") format("truetype");
-}
+    src: url("../fonts/GT-Sectra-Book.ttf");
 
-/*@font-face {
-    font-family: BeirutDisplay-Regular;
-    src: local("assets/fonts/BeirutDisplay-Regular.otf") format("opentype");
-}*/
+}
 
 @font-face {
     font-family: BeirutDisplay-Regular;
     font-weight: normal;
     font-style:normal;
-    src: url("assets/fonts/BeirutDisplay-Regular.eot");
-    src: local("assets/fonts/BeirutDisplay-Regular.otf") format("opentype");
+    src: url("../fonts/BeirutDisplay-Regular.eot");
 }
 
 body{
