--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@ body{
 	margin:0;
 	cursor:default;
 	position:relative;
-	font-family:GTAmerica-Regular;
+	font-family:GT-America-Standard-Regular;
 	width:100vw;
 	height:100%;
 	display:block;
@@ -62,13 +62,13 @@ p{
 	line-height:13pt;
 	letter-spacing:-.25pt;
 	font-weight:normal;
-	font-family:GTSectra-Book;
+	font-family:GT-Sectra-Book;
 }
 
 a{
 	font-size:20px;
 	line-height:1.1;
-	font-family:GTAmerica-Medium;
+	font-family:GT-America-Standard-Medium;
 	text-decoration:none;
 }
 
@@ -77,7 +77,7 @@ h2{
 	margin-bottom:10px;
 	font-size:20px;
 	line-height:1.1;
-	font-family:GTAmerica-Medium;
+	font-family:GT-America-Standard-Medium;
 	text-decoration:none;
 }
 
@@ -90,7 +90,7 @@ h3{
 	margin-bottom:10px;
 	font-size:20px;
 	line-height:1.1;
-	font-family:GTAmerica-Regular;
+	font-family:GT-America-Standard-Regular;
 	font-weight:normal;
 	text-decoration:none;
 }
@@ -101,7 +101,7 @@ h4{
 	font-size:15px;
 	line-height:1.1;
 	color:black;
-	font-family:GTAmerica-Regular;
+	font-family:GT-America-Standard-Regular;
 	font-weight:normal;
 	text-decoration:none;
 }
@@ -113,7 +113,7 @@ h5{
 	font-size:15px;
 	line-height:1.1;
 	color:white;
-	font-family:GTAmerica-Regular;
+	font-family:GT-America-Standard-Regular;
 	font-weight:normal;
 }
 
@@ -196,14 +196,14 @@ blockquote::after{
 .twitterQuote{
 	font-size: 15pt;
 	line-height:1.1;
-	font-family:GTAmerica-Medium;
+	font-family:GT-America-Standard-Medium;
 	color: black;
 	position: relative;
 	text-decoration:none;
 }
 
 .twitterQuote::before{
-	font-family:GTAmerica-Medium;
+	font-family:GT-America-Standard-Medium;
 	content: "\201C";
 	color:black;
 	font-size:15pt;
